--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%">
   <head>
     <meta charset="utf-8" />
     <title>Planning Poker</title>
   </head>
-  <body>
-    <div id="main"></div>
+  <body style="height: 100%; margin: 0; ">
+    <div id="main" style="height: 100%; display: flex; flex-direction: column;font-family: Palatino Linotype, Book Antiqua, Palatino, serif"></div>
     <script src="/app.js"></script>
   </body>
 </html>
